- Moved utils subpackage to esg.security.utils

1.0.2
- Changed versioning number

1.1.0
Provided stub implementations of PolicyService, RegistryService, AttributeService and AuthorizationService that are backed up by local XML files.

Version 1.1.1
- Provided web application home page with facility to test the Attribute and Authorization services.

Version 1.1.2
- Provided support for freely available resources, using a policy attribute of type "ANY".

Version 1.2.0
- Inserted support for database back-ends of Authentication and Authorization services.

Version 1.2.1
- Switched to loading properties from esg.properties via ESGF Properties subclass

Version 1.2.2
- Switched property names to esgf.host, esgf.https.port

Version 1.2.3
- Inserting support for compatibility with legacy system: transform (group,role) pairs into attribute (name, value) pairs.

Version 1.2.4
- Inserted policy that allowed free access to all URLs that contain 'esg_dataroot'

Version 1.2.8
- Changed level of some log statements.
- Inserted debug statement when credentials cannot be loaded from keystore.

Version 1.2.9
- Modified the SAMLAttributeFactoryLocalXmlImpl to parse (group,role) attributes out of the sample XML file

Version 1.3.0
- Included special factory and configuration file to drive the attribute service from the gateway database
- Included functionality for reading registry files produced by ESGF registry

Version 1.3.1
- Included support for parsing list of LAS servers IP addresses from las_serevers.xml

Version 1.4.0
- Exposed PolicyService to HTTP requests via PolicyServiceController
- Introduced Registration Service for access control groups membership

Version 1.4.1
- Configuration changes to ESGFregistry.xml and ESGGpolicies.xml

Version 1.4.2
- Changed PCMDI endpoint from esg-node3 to pcmdi9

Version 1.4.3
- Changed roles used in ESGFpolicies.xml to be "user", "publisher" (lower case)

Version 1.4.4
- Inserted PNNL policy statements