@@ -33,6 +33,7 @@
 
         <!-- Test resources are made freely available -->
         <policy resource=".*test.*" attribute_type="ANY" attribute_value="" action="Read"/>
+        <!-- <policy resource=".*test.*" attribute_type="Test Group" attribute_value="User" action="Read"/> -->
 
         <!-- Everything is Free 
         <policy resource=".*esg_dataroot.*" attribute_type="ANY" attribute_value="" action="Read"/> -->
