@@ -77,3 +77,4 @@ Version 1.4.3
 
 Version 1.4.4
 - Inserted PNNL policy statements
+- Inserted support for registering with a group that does NOT have automatic approval (user registration is pending).
